--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-markdown-editor-lite": "^1.3.4",
     "react-resizable": "^3.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-to-print": "^2.15.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "sonner": "^1.5.0",
